# g21k

./: ProjectHome.md  binutils.pch  gcc.pch
binutils/: Makefile  README  config.def.in  configure  configure.in  g21k-binutils.spec  g21k-binutils.spec.in
binutils/app/: Makefile  mpdefs.h  mputil.c  shell.c
binutils/asm/: action.h  action_table.c  addressing.c  addrmode.h  error.c  fileio.c  ieee.c  lex_yy.c  listing.c  main.c  main.h  obj_sym_misc.h  object_fp.h  pass2.c  reloc.c  section_fp.h  str.c  symbol.h  token.h  token_init.h
binutils/cdump/: Makefile  cdump.c  cdump.h
binutils/doc/: a21000.1
binutils/include/: app.h  atfile.h  auxent.h  coff_io.h  common.h  cscape.h  expr.h  ilnode.h  linenum.h  mem_adi.h  obj_sym.h  port.h  prottp.h  regid.h  sbb_e~xs.h  scnhdr.h  util.h
binutils/ldr/: ach_sprt.c  clean_list.c  error.c  ldr.h  process_args.h
binutils/lib/: Makefile  achparse.c  atfile.c
binutils/link/: ach_sprt.c  ach_sp~1.h  action_fp.h  allocate.c  allocate_fp.h  create_object.h  error.h  error_fp.h  global_syms.h  lex.h  linker.h  linker_aux.h  linker_sym.h  list.c  list.h  list_fp.h  main.c  main_fp.h  mem_map_symbol.h  memory.c  pass1.c  pass1.h  pass2.c  pass2_fp.h  process_args.c  process_args_fp.h  process_section.c  read_object.h  relocate.c  relocate_fp.h  slotvec_fp.h  syms.h  update.c
binutils/modify/: floatmod.c
gcc/: CHANGES  HOST  TODO  patchlevel.h
gcc/adiach/: Makefile.in  achparse.c  achparse.h  app.h  atfile.h  clargpar.c  configure.in  gcc_ach.c  mobstack.c  mungedoc.c  utils.hdr
gcc/g21k/: 21klibs.h.old  Makefile.pc  alloca.c  byteorder.h  c-common.c  c-decl.c  c-iterate.c  c-lex.c  c-parse.in  c-tree.h  caller-save.c  calls.c  cast.c  cc1.lnk  cc1short.lnk  combine.c  config.sub  configure  convert.c  convert.h  cse.c  debug-local-alloc.c  debug-reload1.c  debug-trace.c  defaults.h  doloop.h  emit-rtl.c  explow.c  expr.c  final.c  flow.c  g21k.1  gcc.lnk  genattr.c  genconfig.c  genoutput.c  genpeep.c  genrecog.c  hard-reg-set.h  integrate.c  (+26 more)
gcc/g21xx/: Makefile.in  afloat.c  alloca.c  assert.h  basic-block.h  bison.simple  byteorder.h  c-common.c  c-decl.c  c-lang.c  c-lex.c  c-lex.h  c-parse.gperf  c-pragma.c  c-typeck.c  cccp.c  cexp.y  combine.c  conditions.h  config  config.sub  crtstuff.c  dbxstclass.h  debug-prints.c  debug-reload.c  debug-reload1.c  debug-trace.c  debug-tree.c  dostage3  dump-stat.c  dwarfout.c  emit-rtl.c  enquire.c  expmed.c  expr.c  expr.h  fixinc.sco  floatlib.c  fold-const.c  gbl-ctors.h  (+56 more)
gcc/include/: ansidecl.h  config.h  dis-asm.h
trunk/: README
trunk/binutils/: TODO  acconfig.h  config.h.in  make.def
trunk/gcc/: Makefile  (+1 more)
(+354 files in other folders)
